// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle renders correctly 1`] = `
<div
  className="circle-picker "
  style={
    Object {
      "display": "flex",
      "flexWrap": "wrap",
      "marginBottom": -14,
      "marginRight": -14,
      "width": 252,
    }
  }
>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #FF4638",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #FF4638",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #FF4638",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #FF4638",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #FF4638",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#FF4638"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #A52CAE",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #A52CAE",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #A52CAE",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #A52CAE",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #A52CAE",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#A52CAE"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #5940D3",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #5940D3",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #5940D3",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #5940D3",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #5940D3",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#5940D3"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #5959A7",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #5959A7",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #5959A7",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #5959A7",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #5959A7",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#5959A7"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #4C5E86",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #4C5E86",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #4C5E86",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #4C5E86",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #4C5E86",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#4C5E86"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #1D9EF9",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #1D9EF9",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #1D9EF9",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #1D9EF9",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #1D9EF9",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#1D9EF9"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #00B46D",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #00B46D",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #00B46D",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #00B46D",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #00B46D",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#00B46D"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #FA0095",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #FA0095",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #FA0095",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #FA0095",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #FA0095",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#FA0095"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #FF3366",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #FF3366",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #FF3366",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #FF3366",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #FF3366",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#FF3366"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #00BCD4",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #00BCD4",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #00BCD4",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #00BCD4",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #00BCD4",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#00BCD4"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #00978A",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #00978A",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #00978A",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #00978A",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #00978A",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#00978A"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #4BA4CA",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #4BA4CA",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #4BA4CA",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #4BA4CA",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #4BA4CA",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#4BA4CA"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #FFC400",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #FFC400",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #FFC400",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #FFC400",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #FFC400",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#FFC400"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #77513C",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #77513C",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #77513C",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #77513C",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #77513C",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#77513C"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #94A0B6",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #94A0B6",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #94A0B6",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #94A0B6",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #94A0B6",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#94A0B6"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #9BC40E",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #9BC40E",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #9BC40E",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #9BC40E",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #9BC40E",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#9BC40E"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #FFFFFF",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #FFFFFF",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #FFFFFF",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #FFFFFF",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #FFFFFF",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#FFFFFF"
        />
      </span>
    </div>
  </span>
  <span
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <div
      style={
        Object {
          "MozTransform": "scale(1)",
          "MozTransition": "100ms transform ease",
          "OTransform": "scale(1)",
          "OTransition": "100ms transform ease",
          "WebkitTransform": "scale(1)",
          "WebkitTransition": "100ms transform ease",
          "height": 28,
          "marginBottom": 14,
          "marginRight": 14,
          "msTransform": "scale(1)",
          "msTransition": "100ms transform ease",
          "transform": "scale(1)",
          "transition": "100ms transform ease",
          "width": 28,
        }
      }
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
      >
        <div
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "inset 0 0 0 15px #000000",
              "MozTransition": "100ms box-shadow ease",
              "OBorderRadius": "50%",
              "OBoxShadow": "inset 0 0 0 15px #000000",
              "OTransition": "100ms box-shadow ease",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "inset 0 0 0 15px #000000",
              "WebkitTransition": "100ms box-shadow ease",
              "background": "transparent",
              "borderRadius": "50%",
              "boxShadow": "inset 0 0 0 15px #000000",
              "cursor": "pointer",
              "height": "100%",
              "msBorderRadius": "50%",
              "msBoxShadow": "inset 0 0 0 15px #000000",
              "msTransition": "100ms box-shadow ease",
              "outline": "none",
              "position": "relative",
              "transition": "100ms box-shadow ease",
              "width": "100%",
            }
          }
          tabIndex={0}
          title="#000000"
        />
      </span>
    </div>
  </span>
</div>
`;

exports[`CircleSwatch renders correctly 1`] = `
<span
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    style={
      Object {
        "MozTransform": "scale(1)",
        "MozTransition": "100ms transform ease",
        "OTransform": "scale(1)",
        "OTransition": "100ms transform ease",
        "WebkitTransform": "scale(1)",
        "WebkitTransition": "100ms transform ease",
        "height": 28,
        "marginBottom": 14,
        "marginRight": 14,
        "msTransform": "scale(1)",
        "msTransition": "100ms transform ease",
        "transform": "scale(1)",
        "transition": "100ms transform ease",
        "width": 28,
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "MozBorderRadius": "50%",
            "MozBoxShadow": "inset 0 0 0 15px undefined",
            "MozTransition": "100ms box-shadow ease",
            "OBorderRadius": "50%",
            "OBoxShadow": "inset 0 0 0 15px undefined",
            "OTransition": "100ms box-shadow ease",
            "WebkitBorderRadius": "50%",
            "WebkitBoxShadow": "inset 0 0 0 15px undefined",
            "WebkitTransition": "100ms box-shadow ease",
            "background": "transparent",
            "borderRadius": "50%",
            "boxShadow": "inset 0 0 0 15px undefined",
            "cursor": "pointer",
            "height": "100%",
            "msBorderRadius": "50%",
            "msBoxShadow": "inset 0 0 0 15px undefined",
            "msTransition": "100ms box-shadow ease",
            "outline": "none",
            "position": "relative",
            "transition": "100ms box-shadow ease",
            "width": "100%",
          }
        }
        tabIndex={0}
        title={undefined}
      />
    </span>
  </div>
</span>
`;

exports[`CircleSwatch renders with sizing and spacing 1`] = `
<span
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    style={
      Object {
        "MozTransform": "scale(1)",
        "MozTransition": "100ms transform ease",
        "OTransform": "scale(1)",
        "OTransition": "100ms transform ease",
        "WebkitTransform": "scale(1)",
        "WebkitTransition": "100ms transform ease",
        "height": 40,
        "marginBottom": 40,
        "marginRight": 40,
        "msTransform": "scale(1)",
        "msTransition": "100ms transform ease",
        "transform": "scale(1)",
        "transition": "100ms transform ease",
        "width": 40,
      }
    }
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onClick={[Function]}
        onKeyDown={[Function]}
        style={
          Object {
            "MozBorderRadius": "50%",
            "MozBoxShadow": "inset 0 0 0 21px undefined",
            "MozTransition": "100ms box-shadow ease",
            "OBorderRadius": "50%",
            "OBoxShadow": "inset 0 0 0 21px undefined",
            "OTransition": "100ms box-shadow ease",
            "WebkitBorderRadius": "50%",
            "WebkitBoxShadow": "inset 0 0 0 21px undefined",
            "WebkitTransition": "100ms box-shadow ease",
            "background": "transparent",
            "borderRadius": "50%",
            "boxShadow": "inset 0 0 0 21px undefined",
            "cursor": "pointer",
            "height": "100%",
            "msBorderRadius": "50%",
            "msBoxShadow": "inset 0 0 0 21px undefined",
            "msTransition": "100ms box-shadow ease",
            "outline": "none",
            "position": "relative",
            "transition": "100ms box-shadow ease",
            "width": "100%",
          }
        }
        tabIndex={0}
        title={undefined}
      />
    </span>
  </div>
</span>
`;
